syntax = "proto3";

option csharp_namespace = "TodoGrpc";

package todoit;


message CreateToDoRequest {
    string title = 1;
    string description = 2;
}

message CreateToDoResponse {
    int32 id = 1;
}


message GetToDoRequest {
    int32 id = 1;
}

message GetToDoResponse {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string to_do_status = 4;
}

message GetAllRequest {
    int32 id = 1;
}

message GetAllResponse {
    repeated GetToDoResponse to_dos = 1;
}

message UpdateToDoRequest {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string to_do_status = 4;
}

message UpdateToDoResponse {
    int32 id = 1;
}

message DeleteToDoRequest {
    int32 id = 1;
}

message DeleteToDoResponse {
    int32 id = 1;
}

service ToDo {
    rpc CreateToDo (CreateToDoRequest) returns (CreateToDoResponse);
    rpc GetToDo (GetToDoRequest) returns (GetToDoResponse);
    rpc GetAll (GetAllRequest) returns (GetAllResponse);
    rpc UpdateToDo (UpdateToDoRequest) returns (UpdateToDoResponse);
    rpc DeleteToDo (DeleteToDoRequest) returns (DeleteToDoResponse);
}


